# ST_project

./: CMakeLists.txt  README.md  bugs.md
src/: Conductor.cpp  Conductor.h  Listener.cpp  Listener.hpp  MarkovExperiments.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
